# quicktype-cmake

./: .gitignore  CMakeLists.txt  gen_json.sh  main.cpp  quicktype_gen.sh
lib/: json.hpp
schema/: city.schema
